<resources>
    <string name="_new">New</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="accept_http_content">Accept only http(s)</string>
    <string name="access_control_mode">Access Control Mode</string>
    <string name="access_control_packages">Access Control Packages</string>
    <string name="access_control_packages_summary">Configure access permission for apps</string>
    <string name="active_unsaved_tips">Profile needs to be saved before activation</string>
    <string name="alert_description">Alert</string>
    <string name="allow_all_apps">Allow all apps</string>
    <string name="allow_clash_auto_restart">Allow clash auto restart</string>
    <string name="allow_lan">Allow LAN</string>
    <string name="allow_selected_apps">Allow selected apps</string>
    <string name="always_dark">Always Dark</string>
    <string name="always_light">Always Light</string>
    <string name="app">App</string>
    <string name="app_name">XXX</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="append_system_dns">Append System DNS</string>
    <string name="application_broken">Application Broken</string>
    <string name="application_broken_tips">App lacks the necessary runtime components, which is usually caused by downloading an incomplete apk.</string>
    <string name="application_crashed">Application Crashed</string>
    <string name="application_name">Clash for Android</string>
    <string name="at_least_15_minutes">At least 15 minutes or empty</string>
    <string name="authentication">Authentication</string>
    <string name="auto_restart">Auto Restart</string>
    <string name="auto_update">Auto Update</string>
    <string name="auto_update_minutes">Auto Update (Minutes)</string>
    <string name="behavior">Behavior</string>
    <string name="bind_address">Bind Address</string>
    <string name="block_loopback">Block Loopback</string>
    <string name="block_loopback_summary">Block loopback connections</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="browse_configuration_providers">Browse configuration &amp; providers</string>
    <string name="browse_files">Browse Files</string>
    <string name="button_description">Button</string>
    <string name="bypass_private_network">Bypass Private Network</string>
    <string name="bypass_private_network_summary">Bypass private network addresses</string>
    <string name="cancel">Cancel</string>
    <string name="catalyst_change_bundle_location">Change Bundle Location</string>
    <string name="catalyst_copy_button">Copy\n</string>
    <string name="catalyst_debug">Debug</string>
    <string name="catalyst_debug_chrome">Debug with Chrome</string>
    <string name="catalyst_debug_chrome_stop">Stop Chrome Debugging</string>
    <string name="catalyst_debug_connecting">Connecting to debugger...</string>
    <string name="catalyst_debug_error">Failed to connect to debugger!</string>
    <string name="catalyst_debug_nuclide">Debug with Nuclide</string>
    <string name="catalyst_debug_nuclide_error">Failed to communicate with the bundler to enabling debugging with Nuclide.</string>
    <string name="catalyst_debug_stop">Stop Debugging</string>
    <string name="catalyst_dismiss_button">Dismiss\n(ESC)</string>
    <string name="catalyst_heap_capture">Capture Heap</string>
    <string name="catalyst_hot_reloading">Enable Fast Refresh</string>
    <string name="catalyst_hot_reloading_auto_disable">Disabling Fast Refresh because it requires a development bundle.</string>
    <string name="catalyst_hot_reloading_auto_enable">Switching to development bundle in order to enable Fast Refresh.</string>
    <string name="catalyst_hot_reloading_stop">Disable Fast Refresh</string>
    <string name="catalyst_inspector">Toggle Inspector</string>
    <string name="catalyst_loading_from_url">Loading from %1$s…</string>
    <string name="catalyst_perf_monitor">Show Perf Monitor</string>
    <string name="catalyst_perf_monitor_stop">Hide Perf Monitor</string>
    <string name="catalyst_reload">Reload</string>
    <string name="catalyst_reload_button">Reload\n(R, R)</string>
    <string name="catalyst_reload_error">Failed to load bundle. Try restarting the bundler or reconnecting your device.</string>
    <string name="catalyst_report_button">Report</string>
    <string name="catalyst_sample_profiler_disable">Disable Sampling Profiler</string>
    <string name="catalyst_sample_profiler_enable">Enable Sampling Profiler</string>
    <string name="catalyst_settings">Settings</string>
    <string name="catalyst_settings_title">Debug Settings</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clash_core">Clash Core</string>
    <string name="clash_core_url">https://github.com/Dreamacro/clash</string>
    <string name="clash_for_android">Clash for Android</string>
    <string name="clash_logcat">Clash Logcat</string>
    <string name="clash_notification_content">%1$s↑\t%2$s↓</string>
    <string name="clash_service_status_channel">Clash Status</string>
    <string name="clash_wiki">Clash Wiki</string>
    <string name="clash_wiki_url">https://github.com/Dreamacro/clash/wiki</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="combobox_description">Combo Box</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="compatible">Compatible</string>
    <string name="configuration_yaml">Configuration.yaml</string>
    <string name="copied">Copied</string>
    <string name="create_profile">Create Profile</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="debug">Debug</string>
    <string name="default_">Default</string>
    <string name="default_name_server">Default Name Server</string>
    <string name="delay">Delay</string>
    <string name="delay_test">Delay Test</string>
    <string name="delete">Delete</string>
    <string name="delete_all_logs">Delete All Logs</string>
    <string name="delete_all_logs_warn">All historical logs will *LOST*</string>
    <string name="deny_selected_apps">Deny selected apps</string>
    <string name="detail">Detail</string>
    <string name="direct_mode">Direct Mode</string>
    <string name="disabled">Disabled</string>
    <string name="dns">DNS</string>
    <string name="dns_hijacking">DNS Hijacking</string>
    <string name="dns_hijacking_summary">Handle all dns packet</string>
    <string name="document">Document</string>
    <string name="domain_fallback">Domain Fallback</string>
    <string name="donate">Donate</string>
    <string name="donate_url">https://donate.kr328.app</string>
    <string name="dont_modify">Do not modify</string>
    <string name="duplicate">Duplicate</string>
    <string name="edit">Edit</string>
    <string name="empty">Empty</string>
    <string name="empty_name">Empty Name</string>
    <string name="enabled">Enabled</string>
    <string name="enhanced_mode">Enhanced Mode</string>
    <string name="error">Error</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exit_without_save">Exit without Save</string>
    <string name="export">Export</string>
    <string name="history">History</string>
    <string name="import_">Import</string>
    <string name="more">More</string>
    <string name="network">Network</string>
    <string name="ok">OK</string>
    <string name="override">Override</string>
    <string name="proxy_empty_tips">No groups can be displayed</string>
    <string name="rename">Rename</string>
    <string name="reset">Reset</string>
    <string name="tap_to_start">Tap to start</string>
    <string name="update">Update</string>
</resources>