<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:tag="layout/dialog_profiles_menu_0" android:layout_width="match_parent" android:layout_height="wrap_content">
    <com.tidalab.v2board.clash.design.view.LargeActionLabel android:tag="binding_1" android:padding="@dimen/bottom_sheet_menu_items_padding" android:layout_width="match_parent" android:layout_height="wrap_content" app:icon="@drawable/ic_baseline_update" app:text="@string/update"/>
    <com.tidalab.v2board.clash.design.view.LargeActionLabel android:tag="binding_2" android:padding="@dimen/bottom_sheet_menu_items_padding" android:layout_width="match_parent" android:layout_height="wrap_content" app:icon="@drawable/ic_baseline_edit" app:text="@string/edit"/>
    <com.tidalab.v2board.clash.design.view.LargeActionLabel android:tag="binding_3" android:padding="@dimen/bottom_sheet_menu_items_padding" android:layout_width="match_parent" android:layout_height="wrap_content" app:icon="@drawable/ic_baseline_content_copy" app:text="@string/duplicate"/>
    <com.tidalab.v2board.clash.design.view.LargeActionLabel android:theme="@style/ThemeOverlay.ControlColorError" android:tag="binding_4" android:padding="@dimen/bottom_sheet_menu_items_padding" android:layout_width="match_parent" android:layout_height="wrap_content" app:icon="@drawable/ic_outline_delete" app:text="@string/delete"/>
</LinearLayout>
