<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/design_logs_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <com.tidalab.v2board.clash.design.view.ActivityBarLayout android:id="@+id/activity_bar_layout" android:tag="binding_1" android:layout_width="match_parent" android:layout_height="wrap_content">
            <RelativeLayout android:tag="binding_2" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingEnd="@dimen/item_tailing_margin">
                <include android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_toStartOf="@+id/delete_view" android:layout_alignParentStart="true" layout="@layout/common_activity_bar"/>
                <ImageView android:layout_gravity="end|center_vertical" android:id="@+id/delete_view" android:tag="binding_3" android:background="?attr/selectableItemBackgroundBorderless" android:padding="@dimen/toolbar_image_action_padding" android:focusable="true" android:clickable="true" android:layout_width="@dimen/item_tailing_component_size" android:layout_height="@dimen/item_tailing_component_size" android:src="@drawable/ic_baseline_clear_all" android:layout_centerVertical="true" android:contentDescription="@string/delete_all_logs" android:layout_marginStart="@dimen/item_tailing_margin" android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </com.tidalab.v2board.clash.design.view.ActivityBarLayout>
        <com.tidalab.v2board.clash.design.view.ActionLabel android:tag="binding_4" android:layout_width="match_parent" android:layout_height="wrap_content" app:icon="@drawable/ic_baseline_adb" app:subtext="@string/tap_to_start" app:text="@string/clash_logcat"/>
        <View android:background="?attr/colorControlHighlight" android:layout_width="match_parent" android:layout_height="1dp"/>
        <TextView android:textColor="?attr/colorControlActivated" android:tag="binding_5" android:paddingTop="@dimen/item_padding_vertical" android:paddingBottom="@dimen/item_padding_vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/history" android:paddingEnd="@dimen/item_tailing_margin"/>
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/recycler_list" android:tag="binding_6" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="match_parent"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
