<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" android:tag="layout/dialog_preference_list_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:paddingBottom="@dimen/preference_fullscreen_button_padding" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" android:gravity="center_vertical" android:id="@+id/title_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/item_header_margin" android:layout_marginRight="@dimen/item_header_margin" android:layout_alignTop="@+id/new_view" android:layout_alignBottom="@+id/new_view" android:layout_toStartOf="@+id/new_view" android:layout_alignParentStart="true"/>
        <ImageView android:id="@+id/new_view" android:background="?attr/selectableItemBackgroundBorderless" android:padding="@dimen/toolbar_image_action_padding" android:focusable="true" android:clickable="true" android:layout_width="@dimen/item_tailing_component_size" android:layout_height="@dimen/item_tailing_component_size" android:layout_margin="@dimen/item_tailing_margin" android:src="@drawable/ic_baseline_add" android:contentDescription="@string/_new" android:layout_alignParentEnd="true"/>
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/main_list" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/ok_view" android:layout_below="@+id/title_view"/>
        <Button android:id="@+id/reset_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reset" android:layout_alignParentBottom="true" android:layout_marginStart="@dimen/dialog_button_margin" android:layout_alignParentStart="true" style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <View android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_toStartOf="@+id/cancel_view" android:layout_toEndOf="@+id/reset_view"/>
        <Button android:id="@+id/cancel_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_alignParentBottom="true" android:layout_toStartOf="@+id/ok_view" style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <Button android:id="@+id/ok_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ok" android:layout_alignParentBottom="true" android:layout_marginEnd="@dimen/dialog_button_margin" android:layout_alignParentEnd="true" style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
