<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" android:tag="layout/design_logcat_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.tidalab.v2board.clash.design.view.AppRecyclerView android:id="@+id/recycler_list" android:tag="binding_1" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="match_parent"/>
    <com.tidalab.v2board.clash.design.view.ActivityBarLayout android:id="@+id/activity_bar_layout" android:tag="binding_2" android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:tag="binding_3" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingEnd="@dimen/item_tailing_margin">
            <include android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_toStartOf="@+id/action_layout" android:layout_alignParentStart="true" layout="@layout/common_activity_bar"/>
            <FrameLayout android:id="@+id/action_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentEnd="true">
                <LinearLayout android:tag="binding_4" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageView android:tag="binding_5" android:background="?attr/selectableItemBackgroundBorderless" android:padding="@dimen/toolbar_image_action_padding" android:focusable="true" android:clickable="true" android:layout_width="@dimen/item_tailing_component_size" android:layout_height="@dimen/item_tailing_component_size" android:src="@drawable/ic_baseline_delete" android:contentDescription="@string/delete" android:layout_marginStart="@dimen/item_tailing_margin"/>
                    <ImageView android:tag="binding_6" android:background="?attr/selectableItemBackgroundBorderless" android:padding="@dimen/toolbar_image_action_padding" android:focusable="true" android:clickable="true" android:layout_width="@dimen/item_tailing_component_size" android:layout_height="@dimen/item_tailing_component_size" android:src="@drawable/ic_baseline_publish" android:contentDescription="@string/export" android:layout_marginStart="@dimen/item_tailing_margin"/>
                </LinearLayout>
                <ImageView android:layout_gravity="end" android:tag="binding_7" android:background="?attr/selectableItemBackgroundBorderless" android:padding="@dimen/toolbar_image_action_padding" android:focusable="true" android:clickable="true" android:layout_width="@dimen/item_tailing_component_size" android:layout_height="@dimen/item_tailing_component_size" android:src="@drawable/ic_baseline_stop" android:contentDescription="@string/close" android:layout_marginStart="@dimen/item_tailing_margin"/>
            </FrameLayout>
        </RelativeLayout>
    </com.tidalab.v2board.clash.design.view.ActivityBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
