<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/design_proxy_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" android:layout_gravity="center" android:id="@+id/empty_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/proxy_empty_tips"/>
    <androidx.viewpager2.widget.ViewPager2 android:orientation="horizontal" android:id="@+id/pages_view" android:layout_width="match_parent" android:layout_height="match_parent"/>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.tidalab.v2board.clash.design.view.ActivityBarLayout android:id="@+id/activity_bar_layout" android:tag="binding_1" android:layout_width="match_parent" android:layout_height="wrap_content">
            <RelativeLayout android:tag="binding_2" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingEnd="@dimen/item_tailing_margin">
                <include android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_toStartOf="@+id/url_test_layout" android:layout_alignParentStart="true" layout="@layout/common_activity_bar"/>
                <FrameLayout android:id="@+id/url_test_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginStart="@dimen/item_tailing_margin" android:layout_toStartOf="@+id/menu_view">
                    <ImageView android:layout_gravity="center" android:id="@+id/url_test_view" android:tag="binding_3" android:background="?attr/selectableItemBackgroundBorderless" android:padding="@dimen/toolbar_image_action_padding" android:focusable="true" android:clickable="true" android:layout_width="@dimen/item_tailing_component_size" android:layout_height="@dimen/item_tailing_component_size" android:src="@drawable/ic_baseline_flash_on" android:contentDescription="@string/delay_test"/>
                    <ProgressBar android:id="@+id/url_test_progress_view" android:visibility="gone" android:layout_width="@dimen/item_tailing_component_size" android:layout_height="@dimen/item_tailing_component_size"/>
                </FrameLayout>
                <ImageView android:id="@+id/menu_view" android:background="?attr/selectableItemBackgroundBorderless" android:padding="@dimen/toolbar_image_action_padding" android:focusable="true" android:clickable="true" android:layout_width="@dimen/item_tailing_component_size" android:layout_height="@dimen/item_tailing_component_size" android:src="@drawable/ic_baseline_more_vert" android:layout_centerVertical="true" android:contentDescription="@string/more" android:layout_marginStart="@dimen/item_tailing_margin" android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </com.tidalab.v2board.clash.design.view.ActivityBarLayout>
        <com.google.android.material.tabs.TabLayout android:id="@+id/tab_layout_view" android:background="?android:attr/windowBackground" android:layout_width="match_parent" android:layout_height="@dimen/tab_layout_height" android:alpha="0.96" app:tabBackground="@android:color/transparent" app:tabMode="0"/>
        <View android:id="@+id/elevation_view" android:background="?android:attr/windowBackground" android:layout_width="match_parent" android:layout_height="@dimen/divider_size" android:alpha="0.96" android:elevation="@dimen/tab_layout_elevation"/>
    </LinearLayout>
    <FrameLayout android:layout_gravity="end|bottom" android:tag="binding_4" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/url_test_float_view" android:tag="binding_5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/item_tailing_margin" android:src="@drawable/ic_baseline_flash_on" android:contentDescription="@string/delay_test"/>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
